syntax = "proto3";
package ids;

import "assetmantle/base/ids/v1/assetID.v1.proto";
import "assetmantle/base/ids/v1/classificationID.v1.proto";
import "assetmantle/base/ids/v1/dataID.v1.proto";
import "assetmantle/base/ids/v1/hashID.v1.proto";
import "assetmantle/base/ids/v1/identityID.v1.proto";
import "assetmantle/base/ids/v1/maintainerID.v1.proto";
import "assetmantle/base/ids/v1/orderID.v1.proto";
import "assetmantle/base/ids/v1/coinID.v1.proto";
import "assetmantle/base/ids/v1/anyOwnableID.v1.proto";
import "assetmantle/base/ids/v1/propertyID.v1.proto";
import "assetmantle/base/ids/v1/splitID.v1.proto";
import "assetmantle/base/ids/v1/stringID.v1.proto";
import "gogoproto/gogo.proto";

message AnyID {
  option (gogoproto.goproto_getters) = false;

  oneof impl {
    AssetID asset_i_d = 1;
    ClassificationID classification_i_d = 2;
    DataID data_i_d = 3;
    HashID hash_i_d = 4;
    IdentityID identity_i_d = 5;
    MaintainerID maintainer_i_d = 6;
    OrderID order_i_d = 7;
    AnyOwnableID ownable_i_d = 8;
    PropertyID property_i_d = 9;
    SplitID split_i_d = 10;
    StringID string_i_d = 11;
  }
}
