syntax = "proto3";
package ids;

import "assetmantle/base/ids/v1/hashID.v1.proto";
import "assetmantle/base/ids/v1/stringID.v1.proto";
import "gogoproto/gogo.proto";

message DataID {
  option (gogoproto.goproto_getters) = false;

  StringID type_i_d = 1;
  HashID hash_i_d = 2;
}
